--- a/src/components/Blog/FeaturedPost/styles.module.css
+++ b/src/components/Blog/FeaturedPost/styles.module.css
@@ -47,6 +47,10 @@
 }
 
 @media (min-width: 900px) {
+  .image {
+    height: 100%;
+  }
+
   .title {
     margin-top: 24px;
   }
